src/index.css
@import "tailwindcss";

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  background-color: #ffffff;
}

@media (prefers-color-scheme: dark) {
  :root {
    background-color: #0f172a;
    color: #f8fafc;
  }
}

body {
  margin: 0;
  min-width: 320px;
  min-height: 100vh;
}

@theme {
  --color-outline-variant: #c2c6d2;
  --color-inverse-surface: #2e3132;
  --color-error: #ba1a1a;
  --color-surface-container-low: #f3f4f5;
  --color-surface-dim: #d9dadb;
  --color-outline: #727782;
  --color-background: #f8f9fa;
  --color-on-surface: #191c1d;
  --color-surface-container-high: #e7e8e9;
  --color-surface-bright: #f8f9fa;
  --color-on-surface-variant: #424751;
  --color-error-container: #ffdad6;
  --color-tertiary-fixed: #d7e8c5;
  --color-primary: #00356a;
  --color-tertiary-container: #415035;
  --color-on-background: #191c1d;
  --color-on-primary-container: #96bdff;
  --color-inverse-primary: #a8c8ff;
  --color-on-tertiary-container: #b1c2a0;
  --color-secondary-container: #f4df9b;
  --color-surface-container: #edeeef;
  --color-on-primary-fixed: #001b3c;
  --color-inverse-on-surface: #f0f1f2;
  --color-secondary-fixed: #f7e19d;
  --color-on-secondary-fixed: #231b00;
  --color-on-secondary-fixed-variant: #544611;
  --color-on-primary: #ffffff;
  --color-on-tertiary-fixed-variant: #3d4b31;
  --color-surface-variant: #e1e3e4;
  --color-on-secondary: #ffffff;
  --color-tertiary: #2b3920;
  --color-on-error: #ffffff;
  --color-secondary-fixed-dim: #dac584;
  --color-surface: #f8f9fa;
  --color-surface-tint: #255ea7;
  --color-primary-fixed-dim: #a8c8ff;
  --color-on-tertiary: #ffffff;
  --color-secondary: #6d5d26;
  --color-on-secondary-container: #71612a;
  --color-on-primary-fixed-variant: #00468a;
  --color-surface-container-highest: #e1e3e4;
  --color-on-error-container: #93000a;
  --color-surface-container-lowest: #ffffff;
  --color-primary-fixed: #d6e3ff;
  --color-primary-container: #004b93;
  --color-on-tertiary-fixed: #121f09;
  --color-tertiary-fixed-dim: #bbccaa;
  --font-display-lg: "Libre Caslon Text";
  --font-caption: "Work Sans";
  --font-label-md: "Work Sans";
  --font-headline-lg: "Libre Caslon Text";
  --font-body-lg: "Work Sans";
  --font-headline-md: "Libre Caslon Text";
  --font-headline-lg-mobile: "Libre Caslon Text";
  --font-body-md: "Work Sans";
}

@theme {
  --color-outline-variant: #c2c6d2;
  --color-inverse-surface: #2e3132;
  --color-error: #ba1a1a;
  --color-surface-container-low: #f3f4f5;
  --color-surface-dim: #d9dadb;
  --color-outline: #727782;
  --color-background: #f8f9fa;
  --color-on-surface: #191c1d;
  --color-surface-container-high: #e7e8e9;
  --color-surface-bright: #f8f9fa;
  --color-on-surface-variant: #424751;
  --color-error-container: #ffdad6;
  --color-tertiary-fixed: #d7e8c5;
  --color-primary: #00356a;
  --color-tertiary-container: #415035;
  --color-on-background: #191c1d;
  --color-on-primary-container: #96bdff;
  --color-inverse-primary: #a8c8ff;
  --color-on-tertiary-container: #b1c2a0;
  --color-secondary-container: #f4df9b;
  --color-surface-container: #edeeef;
  --color-on-primary-fixed: #001b3c;
  --color-inverse-on-surface: #f0f1f2;
  --color-secondary-fixed: #f7e19d;
  --color-on-secondary-fixed: #231b00;
  --color-on-secondary-fixed-variant: #544611;
  --color-on-primary: #ffffff;
  --color-on-tertiary-fixed-variant: #3d4b31;
  --color-surface-variant: #e1e3e4;
  --color-on-secondary: #ffffff;
  --color-tertiary: #2b3920;
  --color-on-error: #ffffff;
  --color-secondary-fixed-dim: #dac584;
  --color-surface: #f8f9fa;
  --color-surface-tint: #255ea7;
  --color-primary-fixed-dim: #a8c8ff;
  --color-on-tertiary: #ffffff;
  --color-secondary: #6d5d26;
  --color-on-secondary-container: #71612a;
  --color-on-primary-fixed-variant: #00468a;
  --color-surface-container-highest: #e1e3e4;
  --color-on-error-container: #93000a;
  --color-surface-container-lowest: #ffffff;
  --color-primary-fixed: #d6e3ff;
  --color-primary-container: #004b93;
  --color-on-tertiary-fixed: #121f09;
  --color-tertiary-fixed-dim: #bbccaa;
  --font-display-lg: "Libre Caslon Text";
  --font-caption: "Work Sans";
  --font-label-md: "Work Sans";
  --font-headline-lg: "Libre Caslon Text";
  --font-body-lg: "Work Sans";
  --font-headline-md: "Libre Caslon Text";
  --font-headline-lg-mobile: "Libre Caslon Text";
  --font-body-md: "Work Sans";
}

